--- a/index.html
+++ b/index.html
@@ -1,245 +1,254 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Resume - Start Bootstrap Theme</title>
+  <title>Resume - Start Bootstrap Theme</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/resume.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/resume.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body id="page-top">
+<body id="page-top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Leo Li</span>
-        <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
-        </span>
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">Leo Li</span>
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+      </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-    <div class="container-fluid p-0">
+  <div class="container-fluid p-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-        <div class="my-auto">
-          <h1 class="mb-0">Leo
-            <span class="text-primary">Li</span>
-          </h1>
-          <div class="subheading mb-5">3850 N Mississippi Ave · Portland, OR 97227 ·
-            <a href="mailto:name@email.com">leo.liyj@gmail.com</a>
-          </div>
-          <p class="lead mb-5">I am a software engineer / computational designer at Adidas Future Team.<br />
-            <br />
-            I am currently working on adidas 4D project.<br />
-            <br />
-            I have a strong interest in quantitative analysis and utilize coding to bring innovative ideas to the design process - includes but not limited to 3D printing manufacturing, web technologies and Artificial Intelligence. </p>
-          <div class="social-icons">
-            <a href="https://www.linkedin.com/in/yuanjie-li-bb91287b/">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="https://github.com/LeoYuanjieLi">
-              <i class="fab fa-github"></i>
-            </a>
-          </div>
+    <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+      <div class="my-auto">
+        <h1 class="mb-0">Leo
+          <span class="text-primary">Li</span>
+        </h1>
+        <div class="subheading mb-5">3850 N Mississippi Ave · Portland, OR 97227 ·
+          <a href="mailto:name@email.com">leo.liyj@gmail.com</a>
         </div>
-      </section>
+        <p class="lead mb-5">I am a software engineer / computational designer at Adidas Future Team.<br />
+          <br />
+          I am currently working on adidas 4D project.<br />
+          <br />
+          I have a strong interest in quantitative analysis and utilize coding to bring innovative ideas to the design
+          process - includes but not limited to 3D printing manufacturing, web technologies and Artificial Intelligence.
+        </p>
+        <div class="social-icons">
+          <a href="https://www.linkedin.com/in/yuanjie-li-bb91287b/">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/LeoYuanjieLi">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+      </div>
+    </section>
 
-      <hr class="m-0">
+    <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-        <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+      <div class="my-auto">
+        <h2 class="mb-5">Experience</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Software Engineer / Computational Designer</h3>
-              <div class="subheading mb-3">Adidias Future 4D</div>
-              <p>Design / Implement Adidas 4D, the most cutting edge 3D printing project in the industry. </p>
-              <a href="https://www.adidas.com/us/4D" class="subheading mb-3">
-                Link - Adidas 4D
-              </a>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Sep 2018 - Present</span>
-            </div>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Software Engineer / Computational Designer</h3>
+            <div class="subheading mb-3">Adidias Future 4D</div>
+            <p>Design / Implement Adidas 4D, the most cutting edge 3D printing project in the industry. </p>
+            <a href="https://www.adidas.com/us/4D" class="subheading mb-3">
+              Link - Adidas 4D
+            </a>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Landscape Architect / GIS developer</h3>
-              <div class="subheading mb-3">O'Dell Engineering</div>
-              <p>Landscape architecture and urban design projects</p>
-              <p>AutoCAD automation scripts development</p>
-              <p>QGIS python development</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Jan 2017 - Aug 2018</span>
-            </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sep 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Urban Designer / GIS developer</h3>
-            <div class="subheading mb-3">Bishop Land Design</div>
-            <p>Urban design projects</p>
+            <h3 class="mb-0">Landscape Architect / GIS developer</h3>
+            <div class="subheading mb-3">O'Dell Engineering</div>
+            <p>Landscape architecture and urban design projects</p>
+            <p>AutoCAD automation scripts development</p>
             <p>QGIS python development</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Aug 2016 - Dec 2016</span>
+            <span class="text-primary">Jan 2017 - Aug 2018</span>
           </div>
         </div>
       </div>
-      </section>
 
-      <hr class="m-0">
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Harvard University Graduate School of Design</h3>
-              <div class="subheading mb-3">Master of Landscape Architecture</div>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2013 - May 2016</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">South China University of Technology</h3>
-              <div class="subheading mb-3">Bachelor of Architecture</div>
-              <p>GPA: 3.5</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
-            </div>
-          </div>
-
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">Urban Designer / GIS developer</h3>
+          <div class="subheading mb-3">Bishop Land Design</div>
+          <p>Urban design projects</p>
+          <p>QGIS python development</p>
         </div>
-      </section>
-
-      <hr class="m-0">
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-        <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
-
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline dev-icons">
-            <li class="list-inline-item">
-                <i class="fab fa-python"></i>
-            </li>
-            <li class="list-inline-item">
-                <i class="fab fa-java"></i>
-            </li>
-            <li class="list-inline-item">
-                <p class="small">c++</p>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-css3-alt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-js-square"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-react"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-node-js"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-npm"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Speciality</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Python Data Science track</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Computational Geometry &amp; Algorithm Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">Aug 2016 - Dec 2016</span>
         </div>
-      </section>
+      </div>
+  </div>
+  </section>
 
-      <hr class="m-0">
+  <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a software engineer, I enjoy taking photographs. I love basketball and workouts, I am also a crazy dog lover.</p>
-          <p class="mb-0">Although I am a developer, I still have a strong interest in design because of my education. I do architectural and interactive design as an interest.</p>
+  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+    <div class="my-auto">
+      <h2 class="mb-5">Education</h2>
+
+      <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">Harvard University Graduate School of Design</h3>
+          <div class="subheading mb-3">Master of Landscape Architecture</div>
         </div>
-      </section>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">August 2013 - May 2016</span>
+        </div>
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row">
+        <div class="resume-content mr-auto">
+          <h3 class="mb-0">South China University of Technology</h3>
+          <div class="subheading mb-3">Bachelor of Architecture</div>
+          <p>GPA: 3.5</p>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">August 2008 - May 2013</span>
+        </div>
+      </div>
 
     </div>
+  </section>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <hr class="m-0">
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+    <div class="my-auto">
+      <h2 class="mb-5">Skills</h2>
 
-    <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+      <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+      <ul class="list-inline dev-icons">
+        <li class="list-inline-item">
+          <i class="fab fa-python"></i>
+        </li>
+        <li class="list-inline-item">
+          <i class="fab fa-java"></i>
+        </li>
+        <li class="list-inline-item">
+          <p class="small">c++</p>
+        </li>
+        <li class="list-inline-item">
+          <i class="fab fa-html5"></i>
+        </li>
+        <li class="list-inline-item">
+          <i class="fab fa-css3-alt"></i>
+        </li>
+        <li class="list-inline-item">
+          <i class="fab fa-js-square"></i>
+        </li>
+        <li class="list-inline-item">
+          <i class="fab fa-react"></i>
+        </li>
+        <li class="list-inline-item">
+          <i class="fab fa-node-js"></i>
+        </li>
+        <li class="list-inline-item">
+          <i class="fab fa-less"></i>
+        </li>
+        <li class="list-inline-item">
+          <i class="fab fa-npm"></i>
+        </li>
+      </ul>
 
-  </body>
+      <div class="subheading mb-3">Speciality</div>
+      <ul class="fa-ul mb-0">
+        <li>
+          <i class="fa-li fa fa-check"></i>
+          Full Stack Engineer</li>
+        <li>
+        <li>
+          <i class="fa-li fa fa-check"></i>
+          Python Data Science</li>
+        <li>
+          <i class="fa-li fa fa-check"></i>
+          Computational Geometry &amp; Algorithm Design</li>
+        <li>
+          <i class="fa-li fa fa-check"></i>
+          Cross Functional Teams</li>
+        <li>
+          <i class="fa-li fa fa-check"></i>
+          Agile Development &amp; Scrum</li>
+      </ul>
+    </div>
+  </section>
+
+  <hr class="m-0">
+
+  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+    <div class="my-auto">
+      <h2 class="mb-5">Interests</h2>
+      <p>Apart from being a software engineer, I enjoy taking photographs. I love basketball and workouts, I am also a
+        crazy dog lover.</p>
+      <p class="mb-0">Although I am a developer, I still have a strong interest in design because of my education. I do
+        architectural and interactive design as an interest.</p>
+    </div>
+  </section>
+
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/resume.min.js"></script>
+
+</body>
 
 </html>
