--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Software Engineer / Computational Designer</h3>
             <div class="subheading mb-3">Adidias Future 4D</div>
-            <p>Design / Implement Adidas 4D, the most cutting edge 3D printing project in the industry. </p>
+            <p>Design / Implement Adidas 4D softwares, the most cutting edge 3D printing project in the industry. </p>
             <a href="https://www.adidas.com/us/4D" class="subheading mb-3">
               Link - Adidas 4D
             </a>
@@ -211,7 +211,10 @@
         <li>
         <li>
           <i class="fa-li fa fa-check"></i>
-          Python Data Science</li>
+          Data Science</li>
+        <li>
+          <i class="fa-li fa fa-check"></i>
+          Cloud DevOps</li>
         <li>
           <i class="fa-li fa fa-check"></i>
           Computational Geometry &amp; Algorithm Design</li>
